2000-12-04  Joel Sherrill <joel@OARcorp.com>

        * libc/stdlib/system.c: Avoid compiling do_system() for RTEMS.

2000-12-04  Joel Sherrill <joel@OARcorp.com>

        * libc/include/ieeefp.h: Added entries for OpenCores CPUs.

2000-12-04  Joel Sherrill <joel@OARcorp.com>

        * configure.host (or16, or32): New entries for OpenCores
	OpenRisc CPUs.
        (*-*-rtems*): Add -DNO_EXEC.

2000-12-04  Keith Outwater <vac4050@cae597.rsc.raytheon.com>

        * libc/include/sys/errno.h: Added comments on many error numbers.
        * libc/string/strerror.c: Added some more strings.

2000-11-30  Jeff Johnston <jjohnstn@redhat.com>

	* libc/sys/sh/syscalls.c (_link): New stub.

2000-11-29  Nick Clifton  <nickc@redhat.com>

	* configure.host: Add xscale target.
	* libc/machine/xscale: New directory.
	* libc/machine/xscale/Makefile.am: New file.
	* libc/machine/xscale/Makefile.in: New file.
	* libc/machine/xscale/aclocal.m4: New file.
	* libc/machine/xscale/configure: New file.
	* libc/machine/xscale/configure.in: New file.
	* libc/machine/xscale/memchr.S: New file.
	* libc/machine/xscale/memcmp.S: New file.
	* libc/machine/xscale/memcpy.S: New file.
	* libc/machine/xscale/memmove.S: New file.
	* libc/machine/xscale/memset.S: New file.
	* libc/machine/xscale/strchr.S: New file.
	* libc/machine/xscale/strcmp.S: New file.
	* libc/machine/xscale/strcpy.S: New file.
	* libc/machine/xscale/strlen.S: New file.

Sat Nov 25 11:24:00 2000  Corinna Vinschen <vinschen@cygnus.com>

	* libc/include/sys/types.h: Change i to `__i' in FD_ZERO macro to
	avoid compiler warnings.

2000-11-22  Michael Meissner  <meissner@redhat.com>

	* libc/posix/execl.c (execl): Don't reference environ directly,
	reference it only via a static pointer to avoid problems with some
	shared library systems and with different uses of small data where
	the user specifies his own version of environ.
	* libc/posix/execv.c (execv): Ditto.
	* libc/stdlib/getenv_r.c (_findenv_r): Ditto.