@@ -1,5 +1,12 @@
 2000-12-04  Joel Sherrill <joel@OARcorp.com>
 
+        * libc/sys/rtems/crt0.c: Add stubs for functions implicitly
+        referenced by code generated by gcc 2.8.1.
+        (a29k): Add stubs for V_SPILL, V_FILL, V_BSD_OS, V_EPI_OS to 
+	satisfy gcc.
+
+2000-12-04  Joel Sherrill <joel@OARcorp.com>
+
         * libc/stdlib/system.c: Avoid compiling do_system() for RTEMS.
 
 2000-12-04  Joel Sherrill <joel@OARcorp.com>
